# oscar

./: #1-1-map.hs#  #Sandbox.v#  #inconsistentrewrite.agda#  .#1-1-map.hs  .gitignore  AVL.agda  AVL.agda~  Bradley.agda  Bradley.agdai  Bug.agda  Combined-problems  DomainFunction.hs  Formula.hs  FormulaLexer.hs  HACKING.md  LICENSE.md  Main.hs  OSCAR.agda  OSCAR.agdai  OSCAR.agda~  OSCAR.cabal  OldScratch.lhs  Oscar.v  Oscar.v~  PQToken.hs  Parenthesis.hs  Problem.hs  ProblemParser.hs  QSToken.hs  QToken.hs  QUBS.hs  README  README.md  Recursive.agda  SCRATCH  Sandbox.agda  Sandbox.agdai  Sandbox.agda~  Sandbox.v  Sandbox.v~  (+7 more)
Oscar/: Problem.hs
archive/agda-1/: BottomUp.agda  DecidableMembership.agda  Delay.agda  Everything.agda  Foreword.agda  Hide.agda  IsLiteralProblem.agda  IsLiteralSequent.agda  Membership.agda  OSCAR.agda-lib  Scratch.agda  Sequent.agda  Successor.agda  TermIsomorphism.agda  TermUnification.agda  Unify-monolithic-EnhancedTerm.agda  Unify-revised.agda  UnifyMguCorrectG.agda  UnifyMguFTerminationHunt.agda  Vector.agda  𝑱udgement.agda
archive/doc/: HISTORY-and-TODO
archive/haskell-stash/: Lisp.old.hs  lisp.hs  test.lisp
archive/haskell-wip/: DiscriminationNetwork.hs  Match.hs  TestLiquidZ3.hs  oldWIP.hs
archive/lisp-originalish/: SET757+4-bug1.lisp  SET757+4.lisp  TEST-IV-22.lisp  TEST-V-27.lisp  problem-example.lisp  problem.lisp  run.sh
archive/lisp-revised/: .gitignore  Problem53.agda  SET757+4-bug2.lisp  SET757+4.reformatted.lisp  run.lisp  scratch.lisp
develop/: OSCAR.agda-lib  README.md
develop/src/: Agdasugarmedo.lagda.md  Alphabet.lagda.md  BadHoTTPiUniq.lagda.md  BurnAfterReading.lagda.md  Equivalence.lagda.md  Generality.lagda.md  Metaprogramming.lagda.md  Minimal.lagda.md  README.md  TODO.md  Termination.lagda.md  Type.lagda.md  Visindex.lagda.md
doc/: README.md
doc/How to Keep Your Neighbours in Order/: Pivotal.lagda
lisp/: BUG.log~  README  README~  SET757+4.reformatted.lisp~  TAGS  argument.lisp  defstruct.lisp  hypergraph.lisp  loader.lisp  oscar.lisp  perception-cause-example.lisp  perception-cause.lisp  plan-example-2.lisp  plan.lisp  problem-example.lisp  problem.lisp  reason.lisp  rule.lisp  run.lisp  syntax.lisp  tool.lisp
lisp-sbcl/: .gitignore  758.agda  BUG.lisp  Problem758.agda  README  TAGS  agda.agda-lib  algebra.lisp  expectation.lisp  hypergraph.lisp  initial.lisp  loader.lisp  major-trace-757.sh  monolithic-oscar.lisp  oscar.lisp  perception-cause-example.lisp  planning.lisp  probability.lisp  problem.lisp  reason.lisp  run-all-tests.sh  run-and-compare.sh  run.sh  scratch.lisp  simulation.lisp  syntax.lisp  tags  test.lisp  tool.lisp
lisp/interface/: graphics.lisp
lisp/plan/: plan-examples-1.lisp  plan-examples-2.lisp  plan.lisp
lisp/probable-probabilities/: analyze-probability-structure.lisp
lisp/v3.31/: Assignment-trees_3-26.lisp  OSCAR-loader.lisp  Reason-macros_3-31.lisp
lisp/v4.02/: graphics.lisp  loader.lisp  oscar.lisp  perception-cause.lisp  problem-compiler.lisp  reason.lisp  tool.lisp
original-reindented/: Agent-arguments5.lisp  Assignment-trees_3-26.lisp  Combined-problems.lisp  OSCAR-TOOLS.LISP  OSCAR-TOOLS.lisp  OSCAR-loader.lisp  OSCAR_3-31.lisp  Perception-Causes_3-31.lisp  Reason-macros_3-31.lisp  Rules_3-30.lisp  Syntax_3.lisp  oscar-graphics_4-02.lisp
original-reindented/Code-for-probable-probabilities/: Find-Expectable-Values.lisp  OSCAR-TOOLS.lisp  algebraic simplification.lisp
original-reindented/optional/: Perception-Causes_3-31.lisp  oscar-graphics17.lisp
original-reindented/v3.31/: Agent-arguments5.lisp  Definitions-History.lisp  OSCAR-TOOLS.lisp  OSCAR_3-31.lisp
original-reindented/v4.02/: HISTORY.lisp  argument.lisp  hypergraph.lisp  loader.lisp  perception-cause-example.lisp  rule.lisp  syntax.lisp
original/code/: #analyze-probability-structure.lisp#  Find-Expectable-Values.lisp  Theist vs Agnostic.lisp  Theist vs Agnostic.lisp~  analyze-probability-structure.lisp  analyze-probability-structure.lisp~
src/: DomainFunction.hs  Formula.hs  PQToken.hs  QUBS.hs  Utilities.hs
src-agda/: #TreeTest.agda#  Binding.agda  BottomUp1.agda  BottomUp2.agda  Elements.agda  Enagda03.agda~  Enagda06-bugs-in-record.agda  FindTermNode.agda  Formula.agda  Foundation.agda  Free.agda  HasDecidableSalvation.agda  HasDecidableSubstantiveDischarge.agda  HasDecidableVacuousDischarge.agda  HasDecidableValidation.agda  HasNegation.agda  HasSalvation.agda  HasSatisfaction.agda  HasSubstantiveDischarge.agda  HasVacuousDischarge.agda  Interpretation.agda  IsFormula.agda  IsLiteralProblem.agda  IsPropositionalFormula.agda  LiteralFormula.agda  LiteralProblem.agda  LiteralSequent.agda  MGU-revised.agda  MGU.agda  Match.agdai  Match.agda~  Membership.agda  NaturalDeduction-PatternLambdaBug.agda  NaturalDeduction.agda  NaturalDeduction.monolithic.agda  OSCAR.agda-lib  Oscar.agda  OscarEverything.agda  OscarPrelude.agda  PairUnifier.agda  (+39 more)
src-agda-new/: OSCAR.agda-lib
src-agda-old/: #Enagda05-need-more-help-from-agda.agda#  #Free.agda#  #Sublis&Match.agda#  Arity.agda  Base.agda  Bug-confusing-sizes-message.agda  DelayMishMash.agda  Element.agda  Enagda01.agda  Enagda03.agda  Enagda04.agda  Enagda05-need-more-help-from-agda.agda  Enagda06-bugs-in-record.agdai  Enagda07-typecheck-forever.agda~  Exegesis.agda  FindTermNode.agda  Formula.agda  FunctionName.agda  HasDecidableSalvation.agda  HasDecidableSatisfaction.agda  HasNeitherNor.agda  InterpretationEqualityExceptAtVariableName.agda  IsLiteralFormula.agda  List.agda  List.agdai  Map.agda  Match-complicated.agda  Match-old-IndexedFunctor.agda  Match-old1.agda  Match-old2.agda  Match-old3.agda  Match.agda  New.agda  OSCAR.agda-lib~  OscarPattern.agda  Prolegomenon.agda  Prologue.agda  Scratch.agda  Sublis&Match.agda~  Term.agda  (+21 more)
src-agda-old2/: DMatch.agdga  IFormula.agda  IMatch.agda  Match-InstanceSearchBug.agda  Match-RefineBug.agda  Match.agda  PMatch.agda  Prolegomenon.agda
src-exec/: Main.hs
src-test/: Test.hs
src-wip/: TestLiquid.hs  TestLiquidCSV.hs  Types.hs  WIP.hs  oldWIP.hs
src/Oscar/: Formula.hs  (+21 more)
stash/: char.hs  test.hs
(+733 files in other folders)
